--- a/appsscript.json
+++ b/appsscript.json
@@ -11,5 +11,8 @@
     "https://www.googleapis.com/auth/userinfo.email",
     "https://www.googleapis.com/auth/script.container.ui",
     "https://www.googleapis.com/auth/script.external_request"
-  ]
+  ],
+  "executionApi": {
+    "access": "ANYONE"
+  }
 }
