--- a/.claspignore
+++ b/.claspignore
@@ -1,18 +1,5 @@
+# Node.js файлы (не поддерживаются Google Apps Script)
 sync_with_google.js
 package.json
 package-lock.json
-node_modules/
-README.md
-SYNC_SETUP.md
-QUICK_START.md
-PROJECT_PLAN.md
-BOT_CONCEPT.md
-DEV_PRINCIPLES.md
-DEBUG_GUIDE.md
-TEST_*.js
-test_*.js
-.gitignore
-.claspignore
-*.tmp
-*.temp
-*.log 
+node_modules/ 
